# code-execution-mcp

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  code_execution_tool.py  huggingface_tools.py  main.py  pyproject.toml  security.py
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst
examples/: basic_model_usage.py  image_generation.py  peft_lora.py  rag_pipeline.py
helpers/: print_style.py  shell_local.py  shell_utils.py  strings.py  tty_session.py
tests/: conftest.py  test_code_execution.py  test_huggingface_tools.py  test_model_registry.py
