[project]
name = "code-execution-mcp"
version = "0.2.0"
description = "MCP server exposing code execution and HuggingFace model capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "ipython>=8.0.0",
    "webcolors>=1.13.0",
    "nest_asyncio>=1.6.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
huggingface = [
    "langchain-huggingface>=0.1.0",
    "langchain-core>=0.3.0",
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.6.0",
    "datasets>=3.0.0",
]

[project.scripts]
code-execution-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "code_execution_tool", "huggingface_tools"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
