[project]
name = "code-execution-mcp"
version = "0.3.0"
description = "MCP server exposing code execution, HuggingFace model management, LoRA/PEFT, Diffusers, and RAG pipeline capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "ipython>=8.0.0",
    "webcolors>=1.13.0",
    "nest_asyncio>=1.6.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
huggingface = [
    "langchain-huggingface>=0.1.0",
    "langchain-core>=0.3.0",
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.6.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.19.0",
]
peft = [
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.27.0",
]
diffusers = [
    "diffusers>=0.27.0",
    "accelerate>=0.27.0",
]
rag = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.8.0",
]
all = [
    "code-execution-mcp[huggingface,peft,diffusers,rag]",
]

[project.scripts]
code-execution-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "code_execution_tool", "huggingface_tools"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
